[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "SMDAnalysis"
version = "0.1.0"
description = "Trajectory Analysis Built from MDAnalysis"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.21",
    "MDAnalysis>=2.0",
    "scipy>=1.7",
    "pandas>=1.3",
    "matplotlib>=3.4",
    "pmda>=0.3",
]

[tool.setuptools.packages.find]
include = ["SMDAnalysis*"]

[tool.setuptools.package-data]
SMDAnalysis = ["FF/**/*", "mapping/**/*", "profiles/**/*"]
